answered all questions as in the project described

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -317,6 +317,10 @@
     "\n",
     "__Answer:__\n",
     "\n",
+    "\n",
+    "I believe this is a reasonable expectation to pose on the user. However, using one more pretrainedd xml file which classifies eyes will be able to give better face detection classification. \n",
+    "\n",
+    "\n",
     "We suggest the face detector from OpenCV as a potential way to detect human images in your algorithm, but you are free to explore other approaches, especially approaches that make use of deep learning :).  Please use the code cell below to design and test your own face detection algorithm.  If you decide to pursue this _optional_ task, report performance on each of the datasets."
    ]
   },
@@ -638,7 +642,36 @@
     "           \n",
     "__Question 4:__ Outline the steps you took to get to your final CNN architecture and your reasoning at each step.  If you chose to use the hinted architecture above, describe why you think that CNN architecture should work well for the image classification task.\n",
     "\n",
-    "__Answer:__ "
+    "__Answer:__ \n",
+    "\n",
+    "I chose what was described in the image, but I wanted to add another convolutional layer \n",
+    "\n",
+    "Step 1. since the target size was (224,224), we need to start with this input size.\n",
+    "model.add(Conv2D(filters=16, kernel_size=2, padding='same', activation='relu', \n",
+    "                        input_shape=(224, 224, 3)))\n",
+    "Step 2. our input size is divided in have by using MaxPooling2D function\n",
+    "model.add(MaxPooling2D(pool_size=2))\n",
+    "\n",
+    "Step 3. Repeat the process until filter gets till 128. There is no reason why I went to filter size 128.\n",
+    "I experimented with 64 and 256, but I thought this was the most resonable filter size.\n",
+    "model.add(Conv2D(filters=32, kernel_size=2, padding='same', activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=2))\n",
+    "\n",
+    "model.add(Conv2D(filters=64, kernel_size=2, padding='same', activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=2))\n",
+    "\n",
+    "model.add(Conv2D(filters=128, kernel_size=2, padding='same', activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=2))\n",
+    "\n",
+    "Step 4. We drop it down to 40% of our paramenters and flattened it  \n",
+    "model.add(Dropout(0.4))\n",
+    "model.add(Flatten())\n",
+    "\n",
+    "Step 5. We apply relu function, drop down to another 40% since parameters are too huge and apply softmax function \n",
+    "to get the result\n",
+    "model.add(Dense(500, activation='relu'))\n",
+    "model.add(Dropout(0.4))\n",
+    "model.add(Dense(133, activation='softmax'))"
    ]
   },
   {
@@ -1168,7 +1201,7 @@
     "__Question 5:__ Outline the steps you took to get to your final CNN architecture and your reasoning at each step.  Describe why you think the architecture is suitable for the current problem.\n",
     "\n",
     "__Answer:__ \n",
-    "\n"
+    "The model uses the the pre-trained VGG-19 model as a fixed feature extractor, where the last convolutional output of VGG-19 is fed as input to our model. It needs to equipped with softmax activation in the end, so I used it. Otherwise, I pretty much used VGG-19 bottleneck features to define my architecture and it is already precomputed. "
    ]
   },
   {
@@ -1381,13 +1414,7 @@
       "6680/6680 [==============================] - 2s 285us/step - loss: 3.6338 - acc: 0.7723 - val_loss: 5.1767 - val_acc: 0.5832\n",
       "\n",
       "Epoch 00035: val_loss did not improve from 5.11923\n",
-      "Epoch 36/40\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 36/40\n",
       "6680/6680 [==============================] - 2s 306us/step - loss: 3.6326 - acc: 0.7723 - val_loss: 5.1605 - val_acc: 0.5916\n",
       "\n",
       "Epoch 00036: val_loss did not improve from 5.11923\n",
@@ -1616,7 +1643,9 @@
     "\n",
     "__Question 6:__ Is the output better than you expected :) ?  Or worse :( ?  Provide at least three possible points of improvement for your algorithm.\n",
     "\n",
-    "__Answer:__ "
+    "__Answer:__ \n",
+    "\n",
+    "Yes the output is better than what I actually expected. To improve my algorithm, I need to test more datasets. However, this is pretrained architecture from VGG19, so it didn't have any errors. I also need to have more epochs so it can be trained with more repetitions. I can only think of two for now to improve my algorithm. "
    ]
   },
   {
